--- a/MyEquation.html
+++ b/MyEquation.html
@@ -20,7 +20,7 @@
     </section>
 
     <section>
-      <div id="answer">
+      <div id="answer" class="shadow">
         <h3>Ответ:</h3>
         <table id="result">
           <tr class="firstLine">
